; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ypldap/extr_aldap.c_aldap_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ypldap/extr_aldap.c_aldap_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aldap = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.aldap* @aldap_init(i32 %0) #0 {
  %2 = alloca %struct.aldap*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.aldap*, align 8
  store i32 %0, i32* %3, align 4
  %5 = call %struct.aldap* @calloc(i32 1, i32 4)
  store %struct.aldap* %5, %struct.aldap** %4, align 8
  %6 = icmp eq %struct.aldap* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store %struct.aldap* null, %struct.aldap** %2, align 8
  br label %14

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = load %struct.aldap*, %struct.aldap** %4, align 8
  %11 = getelementptr inbounds %struct.aldap, %struct.aldap* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store i32 %9, i32* %12, align 4
  %13 = load %struct.aldap*, %struct.aldap** %4, align 8
  store %struct.aldap* %13, %struct.aldap** %2, align 8
  br label %14

14:                                               ; preds = %8, %7
  %15 = load %struct.aldap*, %struct.aldap** %2, align 8
  ret %struct.aldap* %15
}

declare dso_local %struct.aldap* @calloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
